[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "secureheaders"
version = "0.1.0"
description = "Web Security Header Analyzer CLI — scan URLs for security misconfigurations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "EdgarOrtegaRamirez" }]
keywords = ["security", "headers", "http", "csp", "hsts", "vulnerability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27,<1",
    "click>=8.1,<9",
    "rich>=13.0,<16",
]

[project.scripts]
secureheaders = "secureheaders.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
